--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,28 +7,39 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="300dp"
-        android:layout_weight="1"
-        app:srcCompat="@android:drawable/alert_dark_frame" />
+   <LinearLayout
+       android:orientation="vertical"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/refresh_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/imageView"
-        android:text="Refresh" />
+       <ImageView
+           android:id="@+id/imageView"
+           android:layout_width="wrap_content"
+           android:layout_height="100dp"
+           android:layout_weight="1"
+           app:srcCompat="@android:drawable/alert_dark_frame" />
 
-    <Button
-        android:id="@+id/next_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/imageView"
-        android:layout_toRightOf="@+id/refresh_btn"
-        android:layout_weight="0"
-        android:text="Next" />
+       <android.support.v4.view.ViewPager
+           android:id="@+id/viewpager"
+           android:layout_width="match_parent"
+           android:layout_height="100dp"
+           android:background="@android:color/holo_blue_bright" />
+
+       <Button
+           android:id="@+id/refresh_btn"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:text="Refresh" />
+
+       <Button
+           android:id="@+id/next_btn"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+
+           android:layout_weight="0"
+           android:text="Next" />
+   </LinearLayout>
+
 
     <ProgressBar
         android:id="@+id/progressBar"
