--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,50 +12,14 @@
        android:layout_width="match_parent"
        android:layout_height="match_parent">
 
-       <ImageView
-           android:id="@+id/imageView"
-           android:layout_width="wrap_content"
+       <com.example.syan.gankclient.CommonPager.CommonViewPager
+           android:id="@+id/my_viewpager"
+           android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
-           app:srcCompat="@android:drawable/alert_dark_frame" />
+           >
+       </com.example.syan.gankclient.CommonPager.CommonViewPager>
 
-       <RelativeLayout
-           android:layout_width="match_parent"
-           android:layout_height="100dp">
-
-           <android.support.v4.view.ViewPager
-               android:id="@+id/viewpager"
-               android:layout_width="match_parent"
-               android:layout_height="match_parent"
-               android:background="@android:color/holo_blue_bright" />
-
-           <LinearLayout
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:layout_alignParentBottom="true"
-               android:layout_centerHorizontal="true"
-               android:layout_marginBottom="10dp"
-               android:orientation="horizontal">
-
-               <ImageView
-                   android:layout_width="10dp"
-                   android:layout_height="10dp"
-                   android:background="@drawable/dot" />
-
-               <ImageView
-                   android:layout_width="10dp"
-                   android:layout_height="10dp"
-                   android:layout_marginLeft="5dp"
-                   android:layout_marginRight="5dp"
-                   android:background="@drawable/dot" />
-
-               <ImageView
-                   android:layout_width="10dp"
-                   android:layout_height="10dp"
-                   android:background="@drawable/dot" />
-           </LinearLayout>
-
-       </RelativeLayout>
 
        <Button
            android:id="@+id/refresh_btn"
@@ -67,7 +31,6 @@
            android:id="@+id/next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
-
            android:layout_weight="0"
            android:text="Next" />
    </LinearLayout>
