--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,10 +15,7 @@
        <com.example.syan.gankclient.CommonPager.CommonViewPager
            android:id="@+id/my_viewpager"
            android:layout_width="match_parent"
-           android:layout_height="100dp"
-           android:layout_weight="1"
-           >
-       </com.example.syan.gankclient.CommonPager.CommonViewPager>
+           android:layout_height="100dp"></com.example.syan.gankclient.CommonPager.CommonViewPager>
 
 
        <Button
