--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,6 +30,14 @@
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="Next" />
+
+       <Button
+           android:id="@+id/quickbet_btn"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_weight="0"
+           android:text="Quick bet" />
+
    </LinearLayout>
 
 
