--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -2,20 +2,19 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/item1"
-        android:icon="@android:drawable/arrow_down_float"
-        android:title="Item1" />
+        android:icon="@drawable/home_notselected_icon"
+        android:title="Home" />
     <item
         android:id="@+id/item2"
-        android:icon="@android:drawable/btn_plus"
-        android:title="Item2" />
-    <item android:id="@+id/item3"
-        android:icon="@android:drawable/arrow_down_float"
-        android:title="Item3"/>
-    <item android:id="@+id/item4"
-        android:icon="@android:drawable/btn_star_big_off"
-        android:title="Item4"/>
-    <item android:id="@+id/item5"
-        android:icon="@android:drawable/btn_plus"
-        android:title="Item5"/>
+        android:icon="@drawable/racing_notselected_icon"
+        android:title="Racing" />
+    <item
+        android:id="@+id/item3"
+        android:icon="@drawable/sport_notselected_icon"
+        android:title="Sports" />
+    <item
+        android:id="@+id/item4"
+        android:icon="@drawable/quickmulti_notselected_icon"
+        android:title="Account" />
 
 </menu>
