--- a/app/src/main/res/layout/home_activity.xml
+++ b/app/src/main/res/layout/home_activity.xml
@@ -20,6 +20,7 @@
         android:background="@android:color/darker_gray" />
 
     <android.support.design.widget.BottomNavigationView
+        android:id="@+id/bottom_nav"
         android:layout_width="match_parent"
         android:layout_height="55dp"
         app:menu="@menu/menu_bottom_navigation" />
