--- a/app/src/main/res/layout/slider_item.xml
+++ b/app/src/main/res/layout/slider_item.xml
@@ -8,9 +8,7 @@
 
     <ImageView
         android:id="@+id/slider_imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        tools:layout_editor_absoluteX="72dp"
-        tools:layout_editor_absoluteY="75dp" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop" />
 </FrameLayout>
